--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,7 @@
 
     <!-- custom CSS -->
     <link rel="stylesheet" href="../public/assets/css/style.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/style.css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
