css loded successfully

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -26,30 +26,33 @@
     -->
     <title>Used Stuff - Used Furniture</title>
     <!-- libraries CSS -->
-    <link rel="stylesheet" href="../public/assets/icon/flaticon_glamer.css" />
     <link
       rel="stylesheet"
-      href="../public/assets/vendor/bootstrap/bootstrap.min.css"
+      href="%PUBLIC_URL%/assets/icon/flaticon_glamer.css"
     />
     <link
       rel="stylesheet"
-      href="../public/assets/vendor/splide/splide.min.css"
+      href="%PUBLIC_URL%/assets/vendor/bootstrap/bootstrap.min.css"
     />
     <link
       rel="stylesheet"
-      href="../public/assets/vendor/swiper/swiper-bundle.min.css"
+      href="%PUBLIC_URL%/assets/vendor/splide/splide.min.css"
     />
     <link
       rel="stylesheet"
-      href="../public/assets/vendor/slim-select/slimselect.css"
+      href="%PUBLIC_URL%/assets/vendor/swiper/swiper-bundle.min.css"
     />
     <link
       rel="stylesheet"
-      href="../public/assets/vendor/animate-wow/animate.min.css"
+      href="%PUBLIC_URL%/assets/vendor/slim-select/slimselect.css"
+    />
+    <link
+      rel="stylesheet"
+      href="%PUBLIC_URL%/assets/vendor/animate-wow/animate.min.css"
     />
 
     <!-- custom CSS -->
-    <link rel="stylesheet" href="../public/assets/css/style.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/style.css" />
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/style.css" />
   </head>
   <body>
@@ -65,18 +68,18 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script src="assets/vendor/bootstrap/bootstrap.bundle.min.js"></script>
-    <script src="assets/vendor/splide/splide.min.js"></script>
-    <script src="assets/vendor/splide/splide-extension-auto-scroll.min.js"></script>
-    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-    <script src="assets/vendor/slim-select/slimselect.min.js"></script>
-    <script src="assets/vendor/animate-wow/wow.min.js"></script>
-    <script src="assets/vendor/splittype/index.min.js"></script>
-    <script src="assets/vendor/mixitup/mixitup.min.js"></script>
-    <script src="assets/vendor/fslightbox/fslightbox.js"></script>
+    <script src="%PUBLIC_URL%/assets/vendor/bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/vendor/splide/splide.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/vendor/splide/splide-extension-auto-scroll.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/vendor/slim-select/slimselect.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/vendor/animate-wow/wow.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/vendor/splittype/index.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/vendor/mixitup/mixitup.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/vendor/fslightbox/fslightbox.js"></script>
 
     <!-- custom JS -->
-    <script src="assets/js/main.js"></script>
-    <script src="assets/js/countdown.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/main.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/countdown.js"></script>
   </body>
 </html>
