--- a/public/index.html
+++ b/public/index.html
@@ -26,34 +26,16 @@
     -->
     <title>Used Stuff - Used Furniture</title>
     <!-- libraries CSS -->
-    <link
-      rel="stylesheet"
-      href="%PUBLIC_URL%/assets/icon/flaticon_glamer.css"
-    />
-    <link
-      rel="stylesheet"
-      href="%PUBLIC_URL%/assets/vendor/bootstrap/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="%PUBLIC_URL%/assets/vendor/splide/splide.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="%PUBLIC_URL%/assets/vendor/swiper/swiper-bundle.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="%PUBLIC_URL%/assets/vendor/slim-select/slimselect.css"
-    />
-    <link
-      rel="stylesheet"
-      href="%PUBLIC_URL%/assets/vendor/animate-wow/animate.min.css"
-    />
+    <link rel="stylesheet" href="/assets/icon/flaticon_glamer.css" />
+    <link rel="stylesheet" href="/assets/vendor/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="/assets/vendor/splide/splide.min.css" />
+    <link rel="stylesheet" href="/assets/vendor/swiper/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="/assets/vendor/slim-select/slimselect.css" />
+    <link rel="stylesheet" href="/assets/vendor/animate-wow/animate.min.css" />
 
     <!-- custom CSS -->
-    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/style.css" />
-    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/style.css" />
+    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="/assets/css/style.css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -68,18 +50,18 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script src="%PUBLIC_URL%/assets/vendor/bootstrap/bootstrap.bundle.min.js"></script>
-    <script src="%PUBLIC_URL%/assets/vendor/splide/splide.min.js"></script>
-    <script src="%PUBLIC_URL%/assets/vendor/splide/splide-extension-auto-scroll.min.js"></script>
-    <script src="%PUBLIC_URL%/assets/vendor/swiper/swiper-bundle.min.js"></script>
-    <script src="%PUBLIC_URL%/assets/vendor/slim-select/slimselect.min.js"></script>
-    <script src="%PUBLIC_URL%/assets/vendor/animate-wow/wow.min.js"></script>
-    <script src="%PUBLIC_URL%/assets/vendor/splittype/index.min.js"></script>
-    <script src="%PUBLIC_URL%/assets/vendor/mixitup/mixitup.min.js"></script>
-    <script src="%PUBLIC_URL%/assets/vendor/fslightbox/fslightbox.js"></script>
+    <script src="/assets/vendor/bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="/assets/vendor/splide/splide.min.js"></script>
+    <script src="/assets/vendor/splide/splide-extension-auto-scroll.min.js"></script>
+    <script src="/assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="/assets/vendor/slim-select/slimselect.min.js"></script>
+    <script src="/assets/vendor/animate-wow/wow.min.js"></script>
+    <script src="/assets/vendor/splittype/index.min.js"></script>
+    <script src="/assets/vendor/mixitup/mixitup.min.js"></script>
+    <script src="/assets/vendor/fslightbox/fslightbox.js"></script>
 
     <!-- custom JS -->
-    <script src="%PUBLIC_URL%/assets/js/main.js"></script>
-    <script src="%PUBLIC_URL%/assets/js/countdown.js"></script>
+    <script src="/assets/js/main.js"></script>
+    <!-- <script src="/assets/js/countdown.js"></script> -->
   </body>
 </html>
