--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
     <script src="assets/vendor/fslightbox/fslightbox.js"></script>
 
     <!-- custom JS -->
-    <script src="assets/js/main.js"></script>
+    <!-- <script src="assets/js/main.js"></script> -->
     <script src="assets/js/countdown.js"></script>
   </body>
 </html>
