--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Used Stuff - Used Furniture</title>
+    <title>Montoaklyn</title>
     <!-- libraries CSS -->
     <link rel="stylesheet" href="/assets/icon/flaticon_glamer.css" />
     <link rel="stylesheet" href="/assets/vendor/bootstrap/bootstrap.min.css" />
